# anime-dl

./: pyproject.toml
anime_dl/: info.py
anime_dl/site/: base.py
anime_dl/sources/: base.py
anime_dl/util/: config.py  data.py  req.py
