[tool.poetry]
name = "anime-dl"
version = "0.1.0"
description = "Download anime from various sources."
authors = ["Mubashshir <ahmubashshir@gmail.com>"]
license = "GPL2"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
urllib3 = "^1.26.6"
xdg = {version = "^5.1.0", platform = "linux"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
